--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="theme-color" content="#000000">
+		<meta name="description" content="Interactive Portfolio">
+		<meta name="keywords" content="Rajagopalan, Rajagopalan Gangadharan,g.raju2000, raj,about raj">
+		<meta name="author" content="Rajagopalan Gangadharan">
 		<!--
 			manifest.json provides metadata used when your web app is added to the
 			homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -19,7 +22,7 @@
 			work correctly both with client-side routing and a non-root public URL.
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-		<title>JS-OS</title>
+		<title>Rajagopalan Gangadharan</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.js"></script>
 	<!--<script>
 		$(document).bind("contextmenu", function (event) 
